--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -61,13 +61,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="비밀번호"
-                    android:inputType="textPassword"/>
+                    android:text="비밀번호"/>
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_alignParentRight="true"
+                    android:inputType="textPassword"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
