--- a/Woong_Android/app/src/main/res/layout/activity_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_login.xml
@@ -15,11 +15,33 @@
         android:layout_weight="1"
         android:background="@color/colorPrimaryDark"/>
 
-    <FrameLayout
-        android:id="@+id/login_frame"
+    <!--로그인 버튼 2개-->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        ></FrameLayout>
+        android:layout_weight="3">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerInParent="true">
+            <Button
+                android:id="@+id/btn_marketer_login"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:background="#FFFFFF"
+                android:layout_centerInParent="true"
+                android:text="판매자로 로그인"
+                android:textColor="#ADADAD"/>
+            <Button
+                android:id="@+id/btn_consumer_login"
+                android:layout_marginTop="30dp"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="소비자로 로그인"
+                android:textColor="#FFFFFF"/>
+        </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
