--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll1.xml
@@ -33,6 +33,7 @@
         android:orientation="vertical"
         android:layout_marginTop="20dp">
         <TextView
+            android:id="@+id/farm_location_confirm"
             android:layout_gravity="center"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
