--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll2.xml
@@ -44,17 +44,20 @@
                     android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" 
-                    android:text="판매자 등록에 앞서 "/>
+                    android:text="판매자 등록에 앞서 "
+                    android:textSize="10sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="가이드라인, 운영원칙"
-                    android:textColor="@color/colorPrimaryDark"/>
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="10sp"/>
                 <TextView
                     android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="을 확인해주세요"/>
+                    android:text="을 확인해주세요"
+                    android:textSize="10sp"/>
             </LinearLayout>
         </LinearLayout>
             <FrameLayout
@@ -141,13 +144,19 @@
                             android:background="@color/colorPrimaryDark"
                             android:layout_marginLeft="5dp"/>
                     </LinearLayout>
-                    <EditText
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:lines="4"
-                        android:inputType="textMultiLine"
-                        android:layout_marginBottom="10dp"/>
+                        android:background="@drawable/draw_edge"
+                        android:layout_marginBottom="10dp">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:lines="4"
+                            android:inputType="textMultiLine"
+                            android:background="@null"/>
+                    </RelativeLayout>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
