--- a/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
@@ -8,9 +8,11 @@
     android:id="@+id/scr"
     tools:context="com.woong.woong_android.seller_market.SellerMarketActivity">
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/test2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:fitsSystemWindows="true"
+        app:elevation="0dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -19,8 +21,8 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimaryDark"
-            app:expandedTitleMarginEnd="100dp"
-            app:expandedTitleMarginStart="64dp"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
             <RelativeLayout
                 android:id="@+id/relative_toptop_sellermarket"
@@ -129,19 +131,25 @@
                     android:layout_below="@id/relative_top_sellermarket"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="90dp"/>
+                        android:layout_height="110dp" />
+
                     <ImageView
                         android:id="@+id/iv_profile_sellermarket"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:background="@color/colorAccent"/>
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:background="#ffaa22" />
                 </LinearLayout>
             </RelativeLayout>
             <android.support.v7.widget.Toolbar
@@ -154,26 +162,27 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+
+    <FrameLayout
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_top_sellermarket"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_gravity="bottom"
                 android:background="@color/colorPrimaryDark"
                 app:tabIndicatorColor="#ffffff"></android.support.design.widget.TabLayout>
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager_sellermarket"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
             </android.support.v4.view.ViewPager>
-        </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
+        </LinearLayout>
+    </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
