--- a/Woong_Android/app/src/main/res/values/colors.xml
+++ b/Woong_Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#237A59</color>
     <color name="colorPrimaryDark">#237A59</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorPastel">#5fc1ad</color>
