--- a/Woong_Android/app/src/main/res/layout/activity_review_write.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_review_write.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".notice.deliveryandreview.review_write.ReviewWriteActivity">
 
     <RelativeLayout
@@ -21,12 +22,212 @@
             android:layout_height="2dp"
             android:background="#bcbcbc"/>
         <TextView
+            android:id="@+id/btn_register_review"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:text="등록하기"/>
-
     </RelativeLayout>
-</RelativeLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <RelativeLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="90dp">
+                <RelativeLayout
+                    android:layout_centerVertical="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp">
+                    <ImageView
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/profileimg_message_notice"
+                        android:layout_centerVertical="true"
+                        android:layout_width="80dp"
+                        android:layout_height="70dp"
+                        android:background="#bcbcbc"/>
+                    <RelativeLayout
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        android:layout_toRightOf="@+id/profileimg_message_notice"
+                        android:layout_width="240dp"
+                        android:layout_height="75dp">
+                        <RelativeLayout
+                            android:paddingLeft="30dp"
+                            android:layout_width="240dp"
+                            android:layout_height="40dp">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="현듀마켓"/>
+                            <TextView
+                                android:layout_alignParentBottom="true"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="웅이네 포슬포슬 왕감자 3kg"/>
+                        </RelativeLayout>
+
+
+                    </RelativeLayout>
+
+
+                </RelativeLayout>
+                <View
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#bcbcbc"/>
+
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="식품 만족도를 별점 평가해주세요"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="배달속도"/>
+            <RelativeLayout
+                android:layout_width="260dp"
+                android:layout_height="wrap_content">
+                <RatingBar
+                    android:id="@+id/rating_speed_review"
+                    android:rating="5"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isIndicator="false"
+                    android:stepSize="1"/>
+                <TextView
+                    android:id="@+id/txt_speed_review"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="완벽해요"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="맛"/>
+            <RelativeLayout
+                android:layout_width="260dp"
+                android:layout_height="wrap_content">
+                <RatingBar
+                    android:id="@+id/rating_taste_review"
+                    android:isIndicator="false"
+                    android:stepSize="1"
+                    android:rating="5"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/txt_taste_review"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="완벽해요"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="신선도"/>
+            <RelativeLayout
+                android:layout_width="260dp"
+                android:layout_height="wrap_content">
+                <RatingBar
+                    android:id="@+id/rating_fresh_review"
+                    android:isIndicator="false"
+                    android:rating="5"
+                    android:stepSize="1"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/txt_fresh_review"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="완벽해요"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="친절도"/>
+            <RelativeLayout
+                android:layout_width="260dp"
+                android:layout_height="wrap_content">
+                <RatingBar
+                    android:id="@+id/rating_kind_review"
+                    android:isIndicator="false"
+                    android:stepSize="1"
+                    android:rating="5"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/txt_kind_review"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="완벽해요"/>
+
+            </RelativeLayout>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#bcbcbc"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="식품 후기를 작성해주세요 (최대 1000자 이내)"/>
+            <EditText
+                android:gravity="top"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:textSize="13sp"
+                android:maxLength="1000"
+                android:background="@null"
+                android:hint="식품은 만족스러우셨나요? 식품의 장점과 아쉬운점을 다른 사람에게 알려주세요. 작성하신 후기는 지금 구매를 고민하는 사람에게 큰 도움이 됩니다."/>
+            <View
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#bcbcbc"/>
+            <TextView
+                android:id="@+id/add_photo_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="사진 추가하기"
+                />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_photo_review"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"></android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+
+
+</LinearLayout>
