--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <ImageView
-            android:id="@+id/join1_logo"
+            android:id="@+id/join2_logo_consumer"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:background="@color/colorPrimaryDark"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:text="소비자로 등록중입니다."
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/join1_logo"/>
+            android:layout_below="@+id/join2_logo_consumer"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -100,7 +100,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <Button
-            android:id="@+id/btn_next_join2"
+            android:id="@+id/btn_next_consumer_join2"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
