--- a/Woong_Android/app/src/main/res/layout/activity_marketer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_join1.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <ImageView
-            android:id="@+id/join1_logo"
+            android:id="@+id/join1_logo_marketer"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:background="@color/colorPrimaryDark"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="판매자로 등록중입니다."
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/join1_logo"/>
+            android:layout_below="@+id/join1_logo_marketer"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -44,7 +44,7 @@
                 android:layout_height="30dp"
                 android:orientation="horizontal">
                 <Spinner
-                    android:id="@+id/spinner_year"
+                    android:id="@+id/spinner_year_marketer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.5"/>
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:text="년"/>
                 <Spinner
-                    android:id="@+id/spinner_month"
+                    android:id="@+id/spinner_month_marketer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:text="월"/>
                 <Spinner
-                    android:id="@+id/spinner_day"
+                    android:id="@+id/spinner_day_marketer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -86,7 +86,6 @@
                     android:layout_weight="1"
                     android:text="이름"/>
                 <EditText
-                    android:id="@+id/spinner_gender"
                     android:layout_width="0dp"
                     android:layout_weight="3"
                     android:layout_height="wrap_content"
@@ -103,7 +102,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <Button
-            android:id="@+id/btn_next_join1"
+            android:id="@+id/btn_next_marketer_join1"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
