--- a/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
@@ -99,7 +99,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <Button
-            android:id="@+id/btn_next_join2"
+            android:id="@+id/btn_next_marketer_join2"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
