--- a/Woong_Android/app/src/main/res/layout/activity_marketer_terms.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_terms.xml
@@ -101,7 +101,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.7">
         <Button
-            android:id="@+id/btn_next_terms"
+            android:id="@+id/btn_next_marketer_terms"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
