--- a/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbarLayout01"
+            android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -177,7 +177,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@color/colorPrimaryDark"
-                app:tabIndicatorColor="#ffffff"></android.support.design.widget.TabLayout>
+                app:tabIndicatorColor="#ffffff"
+                android:clipToPadding="false"
+                android:elevation="4dp"></android.support.design.widget.TabLayout>
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager_sellermarket"
                 android:layout_width="match_parent"
