--- a/Woong_Android/app/src/main/res/layout/title_layout.xml
+++ b/Woong_Android/app/src/main/res/layout/title_layout.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:layout_width="wrap_content"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+    <ImageButton
+        android:id="@+id/ib_message_title"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_launcher_background"
+        android:layout_centerVertical="true"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="한듀곤듀"
-        android:textColor="#ffffff"
-        android:id="@+id/mytext"
-        android:textSize="18sp" />
+        android:layout_toRightOf="@+id/ib_message_title"
+        android:layout_toLeftOf="@+id/ib_cart_title">
+
+        <TextView
+            android:id="@+id/tv_storename_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="현듀곤듀"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+    </RelativeLayout>
     <ImageButton
+        android:id="@+id/ib_cart_title"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="20dp"
         android:background="@drawable/ic_launcher_background"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/view_no_title"/>
+    <View
+        android:id="@+id/view_no_title"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"/>
-
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/ic_launcher_background"
-        android:layout_alignParentLeft="true"/>
-
 </RelativeLayout>
