--- a/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
@@ -172,24 +172,35 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_top_sellermarket"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimaryDark"
-                app:tabIndicatorColor="#ffffff"
-                android:clipToPadding="false"
-                android:elevation="4dp"></android.support.design.widget.TabLayout>
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewpager_sellermarket"
+
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            </android.support.v4.view.ViewPager>
-            <FrameLayout
-                android:id="@+id/frame_sellermarket"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tab_top_sellermarket"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/colorPrimaryDark"
+                    app:tabIndicatorColor="#ffffff"
+                    android:clipToPadding="false"
+                    android:elevation="4dp"></android.support.design.widget.TabLayout>
+                <android.support.v4.view.ViewPager
+                    android:layout_below="@+id/tab_top_sellermarket"
+                    android:id="@+id/viewpager_sellermarket"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </android.support.v4.view.ViewPager>
+                <FrameLayout
+                    android:layout_below="@+id/tab_top_sellermarket"
+                    android:id="@+id/frame_sellermarket"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></FrameLayout>
+            </RelativeLayout>
+
 
         </LinearLayout>
     </FrameLayout>
+
+
 </android.support.design.widget.CoordinatorLayout>
