--- a/Woong_Android/app/src/main/res/layout/activity_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background"
+    android:background="@drawable/ic_launcher_background"
     tools:context=".login.LoginActivity">
 
 
@@ -20,7 +20,7 @@
             android:id="@+id/login_logo"
             android:layout_width="135dp"
             android:layout_height="112dp"
-            android:background="@drawable/login_logo"
+            android:background="@drawable/ic_launcher_background"
             android:layout_marginBottom="55dp"
             android:layout_gravity="center_horizontal"/>
         <LinearLayout
@@ -32,6 +32,8 @@
                 android:id="@+id/btn_marketer_login"
                 android:layout_width="295dp"
                 android:layout_height="48dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/green_round_button"
                 android:layout_centerInParent="true"
                 android:textSize="16dp"
@@ -42,6 +44,9 @@
                 android:layout_marginTop="33dp"
                 android:layout_width="295dp"
                 android:layout_height="48dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/green_round_button"
                 android:textSize="16dp"
                 android:text="소비자로 로그인"
